Avoid stretching the cover picture.

--- a/templates/2020/assets/css/main.css
+++ b/templates/2020/assets/css/main.css
@@ -3101,9 +3101,8 @@
 
 	#banner {
 		padding: 13em 0 9em 0;
-		background-attachment: fixed;
-		background-image: /*url("images/overlay2.png"),*/ url("../../images/picture-1.jpg");
-		background-position: center top;
+		background-image: url("../../images/picture-1.jpg");
+		background-position: center center;
 		background-size: cover;
 		line-height: 1.75;
 		text-align: center;
